@@ -1,0 +1,28 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE taglib PUBLIC 
+	"-//Sun Microsystems, Inc.//DTD JSP Tag Library 1.1//EN" 
+	"http://java.sun.com/dtd/web-jsptaglibrary_1_1.dtd">
+	
+<taglib>
+	<tlibversion>1.0</tlibversion>
+	<jspversion>1.1</jspversion>
+	<shortname>JMWS taglib</shortname>
+	<uri>http://jmws.dyndns.org:8082</uri>
+	
+	<tag>
+		<name>checkLogIn</name>
+		<tagclass>org.jmws.webapp.taglib.login.CheckLogInTag</tagclass>
+		<bodycontent>jsp</bodycontent>
+		<info>Check that User is correcly logged in</info>
+		
+		<attribute>
+			<name>page</name>
+			<required>false</required>
+		</attribute>
+		<attribute>
+			<name>privilege</name>
+			<required>false</required>
+		</attribute>
+	</tag>
+
+</taglib>
