@@ -26,6 +26,9 @@
 # This also helps in backtracking changes, or reviewing development history.  #
 ###############################################################################
 
+2004/03/27 Mikael Barbeaux
+	* Wrote a taglib for checking if user is logged in.
+	
 2004/03/26 Mikael Barbeaux
 	* Wrote the first template for JMWS, using 
 	Struts Tiles definitions.
